# supplementary-numerical-material-nlmem-lasso

./: .gitignore  README.md  figure_1.py  figure_2.py  figure_3.py  figure_4.py  figure_5.py  figure_6.py  figure_7.py  figure_8.py  figure_9.py  pyproject.toml
application/: __init__.py  cluster_fit_model.py  load_data.py  model.py  plot_chr.py  plot_init_chr.py  plot_results.py  process_results.py  regpath_melt.py  selection_function.py
application/data/: QTL_senescence_FDR04pc.csv  carte_Axiom-TABW420k_WGAv1.csv  chr1d.csv  chr2d.csv  chr3d.csv  chr4d.csv  chr5d.csv  chr6d.csv  chr7d.csv  markSignif_bonf.csv  marker_HD_INRmon13LN.csv  senescence.csv
application/results/: selected_snp_all_chr.csv  selected_snp_chr1b.csv  selected_snp_chr1d.csv  selected_snp_chr2a.csv  selected_snp_chr2b.csv  selected_snp_chr2d.csv  selected_snp_chr3a.csv  selected_snp_chr3b.csv  selected_snp_chr3d.csv  selected_snp_chr4a.csv  selected_snp_chr4b.csv  selected_snp_chr4d.csv  (+9 more)
results/: LMEM_N100J10P200_glmmlasso.csv  LMEM_N200J10P1000_glmmlasso.csv  figure_4_NLMEM_N100J10P1000COViidVAR30.csv  figure_4_NLMEM_N100J10P500COViidVAR15.csv  figure_4_NLMEM_N100J10P500COViidVAR30.csv  figure_5_NLMEM_N100J10P1000COViidVAR45.csv  figure_5_NLMEM_N200J10P1000COViidVAR45.csv  figure_5_NLMEM_N200J10P500COViidVAR15.csv  figure_6_NLMEM_N200J10P1000COVar8VAR30.csv  figure_7_two_step_comparaison.csv
simulation/: lmem_cluster.py  nlmem_cluster.py  pkmem_cluster.py  pkmem_simulation.py  pkmem_two_step.R
utils/: __init__.py  estim_selection_fct.py  load_selection_results.py  plot_selection_score.py
(+19 files in other folders)
